@@ -12,7 +12,7 @@ h2, h3, h4, h5, h6, dl, dt, dd{
 
 /* ========== the "befores" ========== */
 
-#cnx_module #cnx_main span.cnx_label, .solution-toggle, .footnote-reference, 
+span.cnx_label, .solution-toggle, .footnote-reference, 
 .equation-number, .view-math, .view-math a, .references-header, 
 .glossary-header, .bibtex-reference, .footnotes-header{
   font-size: .9em;
@@ -237,10 +237,16 @@ blockquote{
   margin: .5em 0;
 }
 
-.example.labview, .example.musical{
-  margin: 0;
+/* ========== media ========== */
+
+div.media, .block{
+  display: block;
+  margin: .5em 0;
   text-align: center;
-  border: 0;
+}
+
+.none{
+  display: none;
 }
 
 /* ========== exercise ========== */
@@ -516,7 +522,7 @@ div.note{
   border-left-color: #ccc;
 }
 
-.note-header{
+.note-header, .note-contents{
   display: inline;
 }
 
