@@ -624,6 +624,7 @@ li{
 
 #cnx_parent{
   margin-top: -.5em;
+  margin-bottom: 1em;
 }
 
 .ratingstars img{
