@@ -1,3 +1,6 @@
+CNXContent-0.46
+  - modern textbook appearance
+
 CNXContent-0.45
   - Google 1+ button
 
